--- a/src/index.css
+++ b/src/index.css
@@ -49,11 +49,12 @@ body {
   max-width: 66vh;
   margin: 1px auto;
   overflow: auto;
-  min-height: 300px;
+  min-height: 400px;
   border: 1px solid steelblue;
   padding: 1px;
   border-radius: 5px;
-  background-color: #313133a4;
+  background-color: #fffffffd;
+  width: 400px;
 }
 
 .header {
